Preset map size to avoid layout shift

--- a/frontend/source/css/style.css
+++ b/frontend/source/css/style.css
@@ -72,8 +72,8 @@ input, button, textarea, select{font:var(--font-m);border:var(--border);border-r
 .sidebar{}
     .current-date{font:var(--font-h3);margin-top:0;}
     .sidebar li{list-style-type:none}
-    .sidebar .map{max-width:100%}
-        .sidebar .map img{max-width:100%;box-sizing:border-box;border:1px solid var(--color-border);border-radius:var(--border-radius);}
+    .sidebar .map{max-width:100%;padding-bottom:calc(100% * 400 / 600);height:0px;border:1px solid var(--color-border);border-radius:var(--border-radius);overflow:hidden;}
+        .sidebar .map img{width:100%;box-sizing:}
 
 #page{height:100%;}
 #timeline{height:100%;display:flex;flex-direction:column;}
